--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,8 +10,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:enableOnBackInvokedCallback="true"
         android:theme="@style/Theme.TheHungryBunch30"
-        tools:targetApi="31">
+        tools:targetApi="33">
         <activity
             android:name=".SplashActivity"
             android:exported="true">
